Cut the Iphone image as required using z-index.

--- a/index.html
+++ b/index.html
@@ -47,23 +47,26 @@
 
 
     <!-- Title -->
-    <div class = "row">
-    <div class = "col-lg-6 col-md-12">
-      <h1 class = "mt-5"> Meet new and interesting dogs nearby.</h1>
-      <button type="button" class = "btn btn-dark btn-lg me-3 mt-5">
-        <i class="fab fa-google-play"></i>
-        Android
-      </button>
-      <button type="button" class = "btn btn-outline-light btn-lg me-3 mt-5"> 
-        <span class="fab fa-apple"></span>
-        iOS
-      </button>
+    <div class="title-section">
+      <div class = "row">
+        <div class = "col-lg-6 col-md-12">
+          <h1 class = "mt-5"> Meet new and interesting dogs nearby.</h1>
+          <button type="button" class = "btn btn-dark btn-lg me-3 mt-5">
+            <i class="fab fa-google-play"></i>
+            Android
+          </button>
+          <button type="button" class = "btn btn-outline-light btn-lg me-3 mt-5"> 
+            <span class="fab fa-apple"></span>
+            iOS
+          </button>
+        </div>
+        <div class = "col-lg-6 col-md-12 p-5">
+          <img class = "title-img" src="images/iphone6.png" alt="iphone-mockup">
+        </div>
+      </div>
     </div>
-    <div class = "col-lg-6 col-md-12 p-5">
-      <img class = "title-img" src="images/iphone6.png" alt="iphone-mockup">
     </div>
-    </div>
-    </div>
+    
 
   </section>
 
