--- a/index.html
+++ b/index.html
@@ -204,17 +204,26 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
-
+    <h2>Find the True Love of Your Dog's Life Today.</h2>
+    <button type="button" class = "cta-btn btn btn-dark btn-lg me-3 mt-5"> 
+      <span class="fab fa-apple"></span>
+      Download
+    </button>
+    <button type="button" class = "cta-btn btn btn-outline-light btn-lg me-3 mt-5">
+      <i class="fab fa-google-play"></i>
+      Download
+    </button>
+    
   </section>
 
 
   <!-- Footer -->
 
   <footer id="footer">
-
+    <i class=" footer-icon fab fa-twitter"></i>
+    <i class=" footer-icon fab fa-facebook-f"></i>
+    <i class=" footer-icon fab fa-instagram"></i>
+    <i class=" footer-icon far fa-envelope"></i>
     <p>© Copyright 2018 TinDog</p>
 
   </footer>
