--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Ubuntu&display=swap" rel="stylesheet"> 
   <script src="https://kit.fontawesome.com/988acad91f.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -204,7 +204,7 @@
 
   <section id="cta">
 
-    <h2>Find the True Love of Your Dog's Life Today.</h2>
+    <h1>Find the True Love of Your Dog's Life Today.</h1>
     <button type="button" class = "cta-btn btn btn-dark btn-lg me-3 mt-5"> 
       <span class="fab fa-apple"></span>
       Download
