--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
               <a class = "nav-link active"> Home</a>
           </li>
           <li class = "nav-item ps-4"> 
-              <a class = "nav-link">Download</a>
+              <a href="#pricing" class = "nav-link">Pricing</a>
           </li>
           <li class = "nav-item ps-4"> 
-              <a class = "nav-link">Pricing</a>
+            <a href="#cta" class = "nav-link">Download</a>
           </li>
           <li class = "nav-item ps-4"> 
-              <a class = "nav-link">About Us</a>
+              <a href="#footer" class = "nav-link">About Us</a>
           </li>
       </ul>
       </div>
@@ -50,7 +50,7 @@
     <div class="title-section">
       <div class = "row">
         <div class = "col-lg-6 col-md-12">
-          <h1 class = "mt-5"> Meet new and interesting dogs nearby.</h1>
+          <h1 class = "title-heading mt-5"> Meet new and interesting dogs nearby.</h1>
           <button type="button" class = "btn btn-dark btn-lg me-3 mt-5">
             <i class="fab fa-google-play"></i>
             Android
@@ -78,17 +78,17 @@
       <div class = "row">
         <div class = "col-md-4 features-card"> 
           <span class="fas fa-check-circle features-icon"></span>
-          <h3>Easy to use.</h3>
+          <h3 class = "features-title">Easy to use.</h3>
           <p>So easy to use, even your dog could do it.</p>
         </div>
         <div class = "col-md-4 features-card"> 
           <span class="fas fa-bullseye  features-icon"></span>
-          <h3>Elite Clientele</h3>
+          <h3 class = "features-title">Elite Clientele</h3>
           <p>We have all the dogs, the greatest dogs.</p>
         </div>
         <div class = "col-md-4 features-card"> 
           <span class="fas fa-heart  features-icon"></span>
-          <h3>Guaranteed to work.</h3>
+          <h3 class = "features-title">Guaranteed to work.</h3>
           <p>Find the love of your dog's life or your money back.</p>
         </div>
       </div> 
@@ -105,7 +105,7 @@
       <div class = "carousel-card">
         <div class="carousel-inner">
           <div class= "carousel-item active">
-            <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+            <h2 class = "testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
             <img class = "testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
             <em>Pebbles, New York</em>
           </div>
@@ -144,7 +144,7 @@
 
   <section id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="pricing-header">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for you and your dog.</p>
 
     <div class = "row">
@@ -154,7 +154,7 @@
             <h3>Chihuahua</h3>
           </div>
           <div class = "card-body">
-            <h2>Free</h2>
+            <h2 class="pricing-tag">Free</h2>
             <p>5 Matches Per Day</p>
             <p>10 Messages Per Day</p>
             <p>Unlimited App Usage</p>
@@ -169,7 +169,7 @@
           <h3>Labrador</h3>
           </div>
           <div class = "card-body">
-            <h2>$49 / mo</h2>
+            <h2 class="pricing-tag">$49 / mo</h2>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
@@ -184,7 +184,7 @@
             <h3>Mastiff</h3>
           </div>
           <div class = "card-body">
-            <h2>$99 / mo</h2>
+            <h2 class="pricing-tag">$99 / mo</h2>
             <p>Pirority Listing</p>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
@@ -204,7 +204,7 @@
 
   <section id="cta">
 
-    <h1>Find the True Love of Your Dog's Life Today.</h1>
+    <h1 class = "cta-heading">Find the True Love of Your Dog's Life Today.</h1>
     <button type="button" class = "cta-btn btn btn-dark btn-lg me-3 mt-5"> 
       <span class="fab fa-apple"></span>
       Download
@@ -224,7 +224,7 @@
     <i class=" footer-icon fab fa-facebook-f"></i>
     <i class=" footer-icon fab fa-instagram"></i>
     <i class=" footer-icon far fa-envelope"></i>
-    <p>© Copyright 2018 TinDog</p>
+    <p>© Copyright 2022 TinDog</p>
 
   </footer>
 
